// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > default :: "boosts" 1`] = `
{
  "hits": [
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-40.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-80.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-120.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-160.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-200.html",
    },
  ],
  "totalHits": 150,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > default :: "shar" 1`] = `
{
  "hits": [],
  "totalHits": 0,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > default :: "the" 1`] = `
{
  "hits": [],
  "totalHits": 0,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > fuzzy-lenient :: "boosts" 1`] = `
{
  "hits": [
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-40.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-80.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-120.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-160.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-200.html",
    },
  ],
  "totalHits": 150,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > fuzzy-lenient :: "shar" 1`] = `
{
  "hits": [
    {
      "score": 1.1988,
      "url": "/en/engineering/engineering-notes-on-field-boosts-40.html",
    },
    {
      "score": 1.1988,
      "url": "/en/engineering/engineering-notes-on-field-boosts-80.html",
    },
    {
      "score": 1.1988,
      "url": "/en/engineering/engineering-notes-on-field-boosts-120.html",
    },
    {
      "score": 1.1988,
      "url": "/en/engineering/engineering-notes-on-field-boosts-160.html",
    },
    {
      "score": 1.1988,
      "url": "/en/engineering/engineering-notes-on-field-boosts-200.html",
    },
  ],
  "totalHits": 112,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > fuzzy-lenient :: "the" 1`] = `
{
  "hits": [
    {
      "score": 1.4522,
      "url": "/en/guides/guides-setting-up-token-mismatches-11.html",
    },
    {
      "score": 1.4522,
      "url": "/en/guides/guides-setting-up-token-mismatches-19.html",
    },
    {
      "score": 1.4522,
      "url": "/en/guides/guides-setting-up-token-mismatches-27.html",
    },
    {
      "score": 1.4522,
      "url": "/en/guides/guides-setting-up-token-mismatches-35.html",
    },
    {
      "score": 1.4522,
      "url": "/en/guides/guides-setting-up-token-mismatches-43.html",
    },
  ],
  "totalHits": 37,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > fuzzy-strict :: "boosts" 1`] = `
{
  "hits": [
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-40.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-80.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-120.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-160.html",
    },
    {
      "score": 1.0275,
      "url": "/en/engineering/engineering-notes-on-field-boosts-200.html",
    },
  ],
  "totalHits": 150,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > fuzzy-strict :: "shar" 1`] = `
{
  "hits": [
    {
      "score": 0.2664,
      "url": "/en/engineering/engineering-notes-on-field-boosts-40.html",
    },
    {
      "score": 0.2664,
      "url": "/en/engineering/engineering-notes-on-field-boosts-80.html",
    },
    {
      "score": 0.2664,
      "url": "/en/engineering/engineering-notes-on-field-boosts-120.html",
    },
    {
      "score": 0.2664,
      "url": "/en/engineering/engineering-notes-on-field-boosts-160.html",
    },
    {
      "score": 0.2664,
      "url": "/en/engineering/engineering-notes-on-field-boosts-200.html",
    },
  ],
  "totalHits": 112,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > fuzzy-strict :: "the" 1`] = `
{
  "hits": [
    {
      "score": 0.3227,
      "url": "/en/guides/guides-setting-up-token-mismatches-11.html",
    },
    {
      "score": 0.3227,
      "url": "/en/guides/guides-setting-up-token-mismatches-19.html",
    },
    {
      "score": 0.3227,
      "url": "/en/guides/guides-setting-up-token-mismatches-27.html",
    },
    {
      "score": 0.3227,
      "url": "/en/guides/guides-setting-up-token-mismatches-35.html",
    },
    {
      "score": 0.3227,
      "url": "/en/guides/guides-setting-up-token-mismatches-43.html",
    },
  ],
  "totalHits": 37,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > high-title-boost :: "boosts" 1`] = `
{
  "hits": [
    {
      "score": 1.14,
      "url": "/en/engineering/engineering-notes-on-field-boosts-40.html",
    },
    {
      "score": 1.14,
      "url": "/en/engineering/engineering-notes-on-field-boosts-80.html",
    },
    {
      "score": 1.14,
      "url": "/en/engineering/engineering-notes-on-field-boosts-120.html",
    },
    {
      "score": 1.14,
      "url": "/en/engineering/engineering-notes-on-field-boosts-160.html",
    },
    {
      "score": 1.14,
      "url": "/en/engineering/engineering-notes-on-field-boosts-200.html",
    },
  ],
  "totalHits": 150,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > high-title-boost :: "shar" 1`] = `
{
  "hits": [],
  "totalHits": 0,
}
`;

exports[`configuration testbed (matrix of build/query configs, snapshotted per combination) > high-title-boost :: "the" 1`] = `
{
  "hits": [],
  "totalHits": 0,
}
`;
